--- a/sass/aha-table-sketch.scss
+++ b/sass/aha-table-sketch.scss
@@ -84,6 +84,7 @@ $inuit-enable-btn--disabled     : true;
 .td{
   @extend td;
   display: table-cell;
+  vertical-align: middle;
 }
 
 :host {
